--- a/src/sample/resources/sample.fxml
+++ b/src/sample/resources/sample.fxml
@@ -17,7 +17,7 @@
    <children>
       <HBox prefHeight="45.0" prefWidth="359.0" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP">
          <children>
-            <Button mnemonicParsing="false" text="Reload plan" />
+            <Button mnemonicParsing="false" onAction="#reloadPlanButton" text="Reload plan" />
             <Button id="tasksButton" mnemonicParsing="false" onAction="#tasksManagerButton" text="Tasks" />
             <Button id="workersButton" mnemonicParsing="false" onAction="#workersManagerButton" text="Workers" />
          </children>
