--- a/src/sample/resources/sample.fxml
+++ b/src/sample/resources/sample.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -26,30 +26,15 @@
         <content>
           <AnchorPane minHeight="-Infinity" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT">
                <children>
-                  <HBox id="days" fx:id="days" prefHeight="100.0" prefWidth="200.0">
+                  <HBox id="days" fx:id="days">
                      <children>
                         <VBox prefHeight="219.0" prefWidth="100.0">
                            <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="100.0" text="Day 1" textAlignment="CENTER" />
+                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="100.0" text="Task X" textAlignment="CENTER" />
                               <Separator prefWidth="200.0" />
-                              <Label text="Tasks:" />
-                              <ListView editable="true" prefHeight="196.0" prefWidth="100.0" />
+                              <Label text="Worker Y" />
+                              <TextArea prefHeight="200.0" prefWidth="200.0" />
                               <Separator prefWidth="200.0" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="10.0" layoutY="10.0" prefHeight="219.0" prefWidth="100.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="100.0" text="Day 1" textAlignment="CENTER" />
-                              <VBox prefWidth="100.0" VBox.vgrow="ALWAYS">
-                                 <children>
-                                    <Button mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                    <Button mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                    <Button mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                    <Button layoutX="10.0" layoutY="35.0" mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                    <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                    <Button layoutX="10.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" text="Button" />
-                                 </children>
-                              </VBox>
                            </children>
                         </VBox>
                      </children>
