--- a/src/sample/resources/sample.fxml
+++ b/src/sample/resources/sample.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
 <GridPane gridLinesVisible="true" hgap="10" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="315.0" prefWidth="443.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.MainController">
 
@@ -26,26 +22,14 @@
         <content>
           <AnchorPane minHeight="-Infinity" minWidth="0.0" nodeOrientation="LEFT_TO_RIGHT">
                <children>
-                  <HBox id="days" fx:id="days">
-                     <children>
-                        <VBox prefHeight="219.0" prefWidth="100.0">
-                           <children>
-                              <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="100.0" text="Task X" textAlignment="CENTER" />
-                              <Separator prefWidth="200.0" />
-                              <Label text="Worker Y" />
-                              <TextArea prefHeight="200.0" prefWidth="200.0" />
-                              <Separator prefWidth="200.0" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
+                  <HBox id="days" fx:id="days" />
                </children>
             </AnchorPane>
         </content>
       </ScrollPane>
    </children>
    <columnConstraints>
-      <ColumnConstraints />
+      <ColumnConstraints prefWidth="800.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
