--- a/src/sample/resources/tasksManager.fxml
+++ b/src/sample/resources/tasksManager.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.TasksManagerController">
     <children>
@@ -23,12 +25,27 @@
             <children>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Delete selected" />
+                        <Button mnemonicParsing="false" onAction="#deleteButton" text="Delete selected" />
                     </children>
                 </HBox>
-                <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                <ListView fx:id="tasksListView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                 <Button mnemonicParsing="false" onAction="#addNewButton" text="Add new task" GridPane.columnIndex="1" />
-                <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Here write struct to add new task" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <VBox prefHeight="200.0" spacing="12.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <HBox prefWidth="200.0">
+                     <children>
+                        <Label text="Dead line" textAlignment="CENTER" />
+                        <TextField fx:id="deadLineTextField" promptText="YYYY-MM-DDThh:mm:ss" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="10.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Working hours" />
+                        <TextField fx:id="workingHoursTextField" promptText="working hours" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
             </children>
         </GridPane>
     </children>
